# diplomka

./: .gitignore  .gitmodules  DOP-abstrakt.docx  DOP-zadani.docx
Microbenchmarks/: CMakeLists.txt
Microbenchmarks/aos-soa/: CMakeLists.txt  main.cpp
Microbenchmarks/aos-soa-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/array-index-patterns/: CMakeLists.txt  main.cpp
Microbenchmarks/array-index-patterns-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/cache-associativity-limit/: main.cpp
Microbenchmarks/cache-associativity-limit-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/false-sharing/: main.cpp
Microbenchmarks/false-sharing-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/hot-cold/: CMakeLists.txt  main.cpp
Microbenchmarks/hot-cold-profile/: main.cpp
Microbenchmarks/loop-carried-dependence/: main.cpp
Microbenchmarks/loop-carried-dependence-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/loop-unrolling/: CMakeLists.txt  main.cpp
Microbenchmarks/loop-unrolling-profile/: main.cpp
Microbenchmarks/matrix-multiplication-variations/: CMakeLists.txt  main.cpp
Microbenchmarks/matrix-multiplication-variations-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/memory-aliasing/: main.cpp
Microbenchmarks/memory-aliasing-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/predictability/: CMakeLists.txt  main.cpp
Microbenchmarks/predictability-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/scripts/: build-script.bat  build-script.txt  run-msvc-script.bat  run-script.bat  sizes.txt
Microbenchmarks/scripts/clangO0/: benchclang1.csv  benchclang1.txt  benchclang10.csv  benchclang10.txt  benchclang11.csv  benchclang11.txt  benchclang12.txt  benchclang13.txt  benchclang2.csv  benchclang2.txt  benchclang3.csv  benchclang3.txt  benchclang4.csv  benchclang4.txt  benchclang5.csv  benchclang5.txt  benchclang6.txt  benchclang7.txt  benchclang8.txt  benchclang9.txt
Microbenchmarks/scripts/clangO2/: benchclang1.txt  benchclang10.csv  benchclang10.txt  benchclang11.txt  benchclang12.txt  benchclang13.txt  benchclang2.csv  benchclang2.txt  benchclang3.csv  benchclang3.txt  benchclang4.csv  benchclang4.txt  benchclang5.csv  benchclang5.txt  benchclang6.csv  benchclang6.txt  benchclang7.csv  benchclang7.txt  benchclang8.csv  benchclang8.txt  benchclang9.csv  benchclang9.txt  results.csv
Microbenchmarks/scripts/gccO0/: benchgcc1.txt  benchgcc10.csv  benchgcc10.txt  benchgcc11.txt  benchgcc12.txt  benchgcc13.txt  benchgcc2.csv  benchgcc2.txt  benchgcc3.csv  benchgcc3.txt  benchgcc4.csv  benchgcc4.txt  benchgcc5.txt  benchgcc6.txt  benchgcc7.csv  results.csv  (+5 more)
Microbenchmarks/simd/: main.cpp
Microbenchmarks/simd-profile/: main.cpp
Microbenchmarks/structure-size/: CMakeLists.txt  main.cpp
Microbenchmarks/structure-size-profile/: CMakeLists.txt  main.cpp
Microbenchmarks/two-d-array-iteration/: CMakeLists.txt  main.cpp
Microbenchmarks/two-d-array-iteration-profile/: CMakeLists.txt  main.cpp
Practice/: CMakeLists.txt
Practice/array-benchmark/: CMakeLists.txt  main.cpp
Practice/hello-world/: hello.c
Practice/matrix-benchmark/: CMakeLists.txt  main.cpp
Practice/particles-benchmark/: CMakeLists.txt  main.cpp
Practice/update-benchmark/: CMakeLists.txt  main.cpp
(+145 files in other folders)
